# forum-rust

./: .env  Cargo.toml
migrations/2023-03-02-132705_create_messages_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
