[package]
name = "forum-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
serde = "1.0.152"
tokio = { version = "1.26.0", features = ["full"] }
